public/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined);


/*THIS IS WHAT WE ARE WORING ON*/
:root {
    --container-white: #ffffffc4;
    --button-purple: #5b5db1;
    --purple-background: rgb(131 116 217 / 80%);
    --dark-purple: #4b3f72;

}

body {
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
    background-color: #FEFAE0;
}
.gradient-body{
    margin: 0;
    padding: 0;
    font-family: "Arial", sans-serif;
    background: rgb(160,90,156);
    background: linear-gradient(139deg, rgba(160, 90, 156, 0.7959558823529411) 0%, rgb(131 116 217 / 80%) 66%, rgba(241, 242, 242, 1) 100%);
    height: 100vh;
}
.non-gradient-body{
    margin: 0;
    padding: 0;
    font-family: "Arial", sans-serif;
    background: rgb(131 116 217 / 80%);
    height: 100vh;
}

.form-error{
    margin: 0;
    color: #d41212;
}

.container-centre {
    display: flex;
    justify-content: center;
}

.search-options {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.container-row-reverse {
    display: flex;
    flex-direction: row-reverse;
    justify-content: center;
    padding: 16px;
    gap:32px;

}
.container-row-reverse > div {
    display: flex;
    flex-direction: column;
    gap:8px;
    width: 100%;
}
.page-header {
    display: flex;
    background-color: var(--dark-purple);
    justify-content: space-between;
    align-items: center;
    color:#FEFAE0;
    padding: 0 25px;
}
h1 a {
    text-decoration: none;
}
a{
    color: var(--dark-purple);
}

.gradient-body .page-header, .non-gradient-body .page-header{
    background-color: #f4f1fd;
}

.gradient-body .page-header h1, .non-gradient-body .page-header h1 {
    color: var(--dark-purple);
}

.gradient-body .page-header button, .non-gradient-body .page-header button{
    background-color: var(--button-purple);
}

.header-buttons {
    display: flex;
    gap: 8px;
}

.header-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 20px 10px 20px 10px;
}

.add-new-button {
    display:flex;
    align-items: center;
    background-color: #f4f1fd;
    padding: 5px 10px;
    border-radius: 5px;
    text-decoration: none;
}



.gap-8 a:hover{
    color: #ac9dde;
}
.item-card{
    background-color: var(--container-white);
    border-radius: 10px;
    padding: 15px;
    max-width: 200px;
    min-width: 200px;
    height: 400px;
    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}
.item-link{
    text-decoration: none;
    color: #3f3561;
}
.item-card img{
    height: 200px;
    width: 150px;
    border-radius: 6px;
    border: 2px solid #FEFAE0;
}
.item-card p{
    font-size: 13px;
}
table {
    border-collapse: collapse;
    border: 1px solid;
}
tbody tr:nth-child(odd) {
    background-color: rgb(183, 177, 232);
}

tbody tr:nth-child(even) {
    background-color: rgb(146, 143, 198);
}

tbody tr:hover {
    background-color: rgb(84, 74, 170);
}

.item-card h3 {
    overflow: hidden;
}

.catalogue-container{
    display: flex;
    flex-wrap: wrap;
    /*justify-content: space-between;*/
    gap: 30px;
    /*margin: 30px 30px 0 30px;*/
}

.search-results input {
    height: 30px;
    border-radius: 10px;
    border: none;
    padding: 5px 20px;
    background: var(--container-white);
    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);
    min-width: 50%;
    width: 55vw;
    margin-right: 30px;
}

.search-results input:focus {
    outline: none;
}

.search-button {

    background: var(--container-white);
    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);
    border-radius: 10px;
    width: 100px;
    height: 40px;
    padding: 10px;
    border: none;
}

.search-button:hover {
    background-color: lightgray;
    cursor: pointer;
}


.search-sort-by{
    display: flex;
    gap: 32px;
    justify-content: flex-start;
}


/*.grid-button {*/
/*    height: 40px;*/
/*    width: 50px;*/
/*    padding: 10px;*/
/*    border: none;*/
/*    border-radius: 0px 10px 10px 0px;*/
/*    background: var(--container-white);*/
/*    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);*/
/*    cursor: pointer;*/
/*}*/

/*.list-button {*/
/*    height: 40px;*/
/*    width: 50px;*/
/*    padding: 10px;*/
/*    border: none;*/
/*    border-radius: 10px 0px 0px 10px;*/
/*    background: var(--container-white);*/
/*    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);*/
/*    cursor: pointer;*/
/*}*/

#dropdown {
    background: var(--container-white);
    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);
    border-radius: 10px;
    height: 40px;
    padding: 10px;
    border: none;
}
#reserve-dropdown{
    border-radius: 10px;
    height: 30px;
    padding: 5px;
    border: none;
}

.reservations-container{
    max-width: 70vw;
    margin: auto;
}

.reservations-container h1 {
    color: var(--dark-purple);
    margin: 50px 0;
}

.reservations-container h2 {
    color: var(--dark-purple);
    margin: 0;
}

.reservation-card button {
    background-color: var(--button-purple);
    border-radius: 5px;
    padding: 10px 10px;
    border:0px;
    height: 50px;
    width: 200px;
    color:white;
    cursor: pointer;

}

.reservation-card p {
    font-size: large;
}

.reserved-book-info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.reservation-card button:hover {
    background-color: var(--dark-purple);
    cursor: pointer;
}
.reservation-card {
    background-color: var(--container-white);
    border-radius: 10px;
    padding: 15px;
    /*height: 400px;*/
    box-shadow: 4px 4px 2px 2px rgb(0 0 0 / 10%);
    display: flex;
    justify-content: space-between;
    margin-bottom: 30px;
}
/* ... */

